wxplotjs/scss/wxplot.scss
.wxplot-input-error {
	border-color: red;
}

.wxplot-interval-control {
	margin: 2px;

	label {
		margin-right: 3px;
	}

	/* Fonts vary so it's best for this to be on the bigger side. */
	input {
		width: 7rem;
	}
}

div.wxplot-interval-control {
	display: inline-block;
}

.wxplot-error-message {
	color: red;
}

#wxplot-legend {
	font: 1rem sans-serif;
}

.wxplot-legend-group {
	display: inline-block;
	background-color: white;
	padding: 2px;
	margin: 2px;
	border: 1px solid black;

	div {
		display: inline-block;
	}
}

.wxplot-legend-trace {
	display: inline-block;
	margin: 2px;
	padding: 2px;
	background-color: #efefef;

	& > canvas {
		margin-right: 2px;
		vertical-align: text-bottom;
	}
}

#wxplot-timespan-control-form {
	margin: 2px;

	input {
		font: 1rem sans-serif;
		margin: 3px;
		border:1px solid #CCCCCC;
		border-radius: 3px;
		background-color: #F4F5F5;
		-webkit-appearance: none;

		/* Prevent sticky hover on mobile */
		@media (hover: hover) {
			&:hover {
				border:1px solid #ADADAD;
				background-color: #d9dddd;
			}
		}

		&.color-left {
			background-image: linear-gradient(to right, lightblue, #F4F5F5);

			@media (hover: hover) {
				&:hover {
					background-image: linear-gradient(to right, #8ac7db, #d9dddd);
				}
			}
		}

		&.color-center {
			background-color: lightblue;

			@media (hover: hover) {
				&:hover {
					background-color: #8ac7db;
				}
			}
		}

		&.color-right {
			background-image: linear-gradient(to right, #F4F5F5, lightblue);
			@media (hover: hover) {
				&:hover {
					background-image: linear-gradient(to right, #d9dddd, #8ac7db);
				}
			}
		}
	}
}

#wxplot-controls, #wxplot-canvas {
	font-family: sans-serif;
}

#wxplot-controls input {
	font: 1rem sans-serif;
}

#wxplot-canvas {
	width: 100%;
	height: 100%;
}

#wxplot-canvas-box {
	width: 700px;
	height: 400px;
	position: relative;
}

#wxplot-brush-indicator, #wxplot-brush {
	position: absolute;
	left: 0;
}

#wxplot-brush-indicator {
	top: 0;
	pointer-events: none;

	rect {
	    fill: rgb(119, 119, 119);
	    fill-opacity: 0.3;
    }
}

#wxplot-brush {
	bottom: 0;
	background-color: rgba(72, 63, 191, 0.1);

	.selection {
	    stroke: none;
	}
}

